# Circuit_Simulator

./: CMakeLists.txt  README.md  calculator.h  main.c  topology.h  visual.c  visual.h
include/: component.h  visual.h
src/: calculator.c  component.c  topology.c  visual.c
